# SENTIENT_INSTALLER

./: .gitignore  Cargo.toml  README.md
crates/sentient-installer-core/: Cargo.toml
crates/sentient-installer-core/src/: checks.rs  distro.rs  lib.rs  progress.rs
docs/: RESEARCH_AND_PLAN.md
src/: app.js  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
